// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MedicinalForms forms should match snapshot 1`] = `
<section
  aria-labelledby="medicinal-forms"
  class="section"
>
  <h2
    id="medicinal-forms"
  >
    Medicinal forms
  </h2>
  <p>
    <em>
      No
    </em>
     licensed medicines listed.
  </p>
  <p>
    View
     
    <a
      href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/"
      id="medicinal-forms-link"
    >
      <span>
        anti-d (rh
        <sub>
          0
        </sub>
        ) immunoglobulin
      </span>
       medicinal forms and pricing information
    </a>
     
    or jump straight to:
  </p>
  <ul
    aria-labelledby="medicinal-forms-link"
  >
    <li>
      <a
        href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/#tablets"
      >
        Tablets
      </a>
    </li>
    <li>
      <a
        href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/#eye-drops"
      >
        Eye drops
      </a>
    </li>
  </ul>
</section>
`;

exports[`MedicinalForms should match snapshot 1`] = `
<div>
  <section
    aria-labelledby="medicinal-forms"
    class="section"
  >
    <h2
      id="medicinal-forms"
    >
      Medicinal forms
    </h2>
    <p>
      <em>
        No
      </em>
       licensed medicines listed.
    </p>
    <p>
      <a
        href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/"
        id="medicinal-forms-link"
      >
        View medicinal forms and pricing information
      </a>
    </p>
    <p>
      Or jump straight to:
    </p>
    <ul
      aria-label="Links to each medicinal form"
    >
      <li>
        <a
          href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/#tablets"
        >
          Tablets
        </a>
      </li>
      <li>
        <a
          href="/drugs/anti-d-rh0-immunoglobulin/medicinal-forms/#eye-drops"
        >
          Eye drops
        </a>
      </li>
    </ul>
  </section>
</div>
`;
